webook/k8s-webook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      labels:
        app: webook-mysql
    spec:
      containers:
      - name: webook-mysql
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name:  mysql-storage
            mountPath:  /mysql
        ports:
        - containerPort: 3306
      restartPolicy: Always
      volumes:
        - name:  mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
