webook/k8s-webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - port:  3308
      protocol: TCP
      targetPort: 3306
      nodePort: 30306
  type: NodePort
