webook/k8s-webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
  - port: 16379
    targetPort: 6379
    protocol: TCP
    nodePort: 30379
  type: NodePort
